--- a/style.css
+++ b/style.css
@@ -145,3 +145,41 @@ span{
     font-weight: bold;
     padding-top: 7px;
 }
+
+
+/* panal */
+
+.panal{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.panal p{
+    display: inline;
+    
+}
+.deals{
+    width: 80%;
+    
+}
+.deals p{
+    margin-left: 1rem;
+    font-size: 0.9rem;
+}
+.now{
+    font-weight: bold;
+}
+
+
+/* main */
+
+.mainimg{
+    background-image: url("mainimg.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+
+}
